Updated my profile

--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <h1>DeannaCollins</h1>
-
+<h3>Profile</h3>
+<ul>
+<li>Started: 01 August 2024</li>
+<li>Role: Student</li>
+<li>Hobbies: Spending time with my family, Sewing, Camping and Road-trips</li>
+</ul>
